# rsvici

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: error.rs  lib.rs
src/client/: listener.rs  mod.rs  packet.rs  packet_type.rs  session.rs
src/client/tcp/: mod.rs
src/client/unix/: mod.rs
tests/: request.rs  stream_request.rs  stream_request_with_return.rs  subscribe.rs
